# rust-bevy

./: .gitignore  Cargo.toml  README.md  docs.html  documentation.txt  web_build_guide.txt
assets/: base.particle original.ron  base.particle.ron
docs-Dateien/: crates.js
src/: button.rs  controls.rs  db.rs  fly_plugin.rs  gamestate.rs  main.rs  main_.rs  particle.rs  paused.rs  schnecke.rs  scoreboard.rs  texts.rs  timers.rs  ui.rs
webbuild/: index.html
